ingress/ingress-rules-monitoring.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: besu-ingress-monitoring-routes
  namespace: besu
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/kibana/(.*) /$1 break;
      rewrite (?i)/kibana$ / break;
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32
spec:
  ingressClassName: monitoring-nginx
  rules:
  - http:
      paths:
      - path: /blockscout
        pathType: Prefix
        backend:
          service:
            name: blockscout
            port:
              number: 4000
      - path: /explorer
        pathType: Prefix
        backend:
          service:
            name: quorum-explorer
            port:
              number: 80
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 3000
